# the-gatekeeper

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SECURITY_REVIEW.md  TECHNICAL.md  main.py  pyproject.toml  railway.toml  requirements.txt
.streamlit/: config.toml
app/: main.py
config/: settings.py
src/: graph.py
src/agents/: drafter.py  researcher.py  state.py  triage.py
src/database/: local_store.py
src/providers/: base.py  google_prov.py  ms_prov.py
tests/: conftest.py  test_drafter.py  test_graph.py  test_local_store.py  test_providers.py  test_researcher.py  test_settings.py  test_triage.py
